frame/support/test/tests/pallet_ui/step_002.rs
#[frame_support::pallet]
mod pallet {
}

fn main() {
}
